--- a/stylesheet-1.css
+++ b/stylesheet-1.css
@@ -4,3 +4,9 @@ body {
  .toptext {
   text-align: center;
 }
+.image-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
